--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,15 +23,29 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div class="jumbotron">
-			<h1>Michael Bernstein</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<h1>Small Talk</h1>
 		</div>
 
-    <ol>
-    {{#each projects}}
-      <li><a href="#{{id}}">{{name}}</a></li>
-    {{/each}}
-    </ol>
+		<a href="history/">
+			<img src="images/new_challenge.jpg" alt="history">
+		</a>
+		<a href="log/">
+			<img src="images/new_challenge.jpg" alt="log">
+		</a>
+		<a href="challenge/">
+			<img src="images/new_challenge.jpg" alt="challenge">
+		</a>
+		<a href="entry/">
+			<img src="images/new_challenge.jpg" alt="entry">
+		</a>
+		<a href="help/">
+			<img src="images/new_challenge.jpg" alt="get a new challenge">
+		</a>
+		<a href="guide/">
+			<img src="images/new_challenge.jpg" alt="get a new challenge">
+		</a>
+
+
 
 
 		<h4>Projects</h4>
