added appropriate links to all pages

--- a/views/challenge.handlebars
+++ b/views/challenge.handlebars
@@ -26,6 +26,15 @@
 			<h1>Challenge</h1>
 		</div>
 
+		<a href="/">
+			<img src="images/new_challenge.jpg" alt="back to main menu">
+		</a>
+		<a href="/complete">
+			<img src="images/new_challenge.jpg" alt="I'm Done">
+		</a>
+
+		<p>RANDOM CHALLENGE HERE</p>
+
 
 
 
