--- a/views/complete.handlebars
+++ b/views/complete.handlebars
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>HCI Project Portfolio</title>
+	<title>Very Good!</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -23,28 +23,20 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div class="jumbotron">
-			<h1>Small Talk</h1>
+			<h1>Challenge Complete!</h1>
 		</div>
 
-		<a href="challenge/">
-			<img src="images/new_challenge.jpg" alt="challenge">
+		<a href="/">
+			<img src="images/new_challenge.jpg" alt="back to main menu">
 		</a>
-		<a href="history/">
-			<img src="images/new_challenge.jpg" alt="history">
-		</a>
-		<a href="help/">
-			<img src="images/new_challenge.jpg" alt="halp">
-		</a>
-		<a href="guide/">
-			<img src="images/new_challenge.jpg" alt="how to talk like a real human bean">
+		<a href="/entry">
+			<img src="images/new_challenge.jpg" alt="write a log!">
 		</a>
 
+		<p>Congratulations</p>
 
 
 
-
-
-	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
