--- a/views/entry.handlebars
+++ b/views/entry.handlebars
@@ -27,6 +27,15 @@
 		</div>
 
 
+		<a href="/">
+			<img src="images/new_challenge.jpg" alt="nvm, back to main menu">
+		</a>
+
+		<form name="log" onsubmit="return submitLog()" >
+		  Journal: <input type="text" name="logField"/>
+		  <input type="submit" name="Submit" value="Submit"/>
+		</form>
+
 
 
 	<script src="https://code.jquery.com/jquery.js"></script>
