--- a/views/guide.handlebars
+++ b/views/guide.handlebars
@@ -25,7 +25,11 @@
 		<div class="jumbotron">
 			<h1>Guide</h1>
 		</div>
-
+		<a href="/">
+			<img src="images/new_challenge.jpg" alt="back to main menu">
+		</a>
+		
+		<p>TIPS ON TALKING TO PEOPLE</p>
 
 
 
