--- a/views/log.handlebars
+++ b/views/log.handlebars
@@ -26,6 +26,15 @@
 			<h1>Log</h1>
 		</div>
 
+		<p>Log for {{logDate}}</p>
+
+		<a href="/">
+			<img src="images/new_challenge.jpg" alt="back to main menu">
+		</a>
+		<a href="/history/">
+			<img src="images/new_challenge.jpg" alt="back to history">
+		</a>
+
 
 
 
