--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -26,6 +26,12 @@
 			<h1>Help</h1>
 		</div>
 
+		<a href="/">
+			<img src="images/new_challenge.jpg" alt="back to main menu">
+		</a>
+
+		<p>HOW TO USE THE APP</p>
+
 
 
 
