--- a/views/history.handlebars
+++ b/views/history.handlebars
@@ -26,6 +26,19 @@
 			<h1>History</h1>
 		</div>
 
+		<a href="/">
+			<img src="images/new_challenge.jpg" alt="main menu">
+		</a>
+		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
+		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
+		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
+		{{#each logs}}
+		<div class="/log" id="{{date}}">
+			<a href="/log/{{date}}" class="thumbnail">
+				<p>{{date}}</p>
+			</a>
+		</div>
+		{{/each}}
 
 
 
