--- a/views/challenge.handlebars
+++ b/views/challenge.handlebars
@@ -33,7 +33,7 @@
 			<img src="images/new_challenge.jpg" alt="I'm Done">
 		</a>
 
-		<p>RANDOM CHALLENGE HERE</p>
+		<p>RANDOM CHALLENGE HERE: {{challenge}}</p>
 
 
 
