log,history,entry functionality done

--- a/views/entry.handlebars
+++ b/views/entry.handlebars
@@ -31,9 +31,17 @@
 			<img src="images/new_challenge.jpg" alt="nvm, back to main menu">
 		</a>
 
-		<form name="log" onsubmit="return submitLog()" >
-		  Journal: <input type="text" name="logField"/>
-		  <input type="submit" name="Submit" value="Submit"/>
+		<form name="log" role="form"  method="get" action="/add" >
+			<h3>Write a log!</h3>
+			<div class="form-group">
+				<label for="name">Title:</label>
+				<input type="text" class="form-control" id="name" placeholder="Title" name="title">
+			</div>
+			<div class="form-group">
+				<label for="description">Log:</label>
+				<input type="text" class="form-control" id="description" placeholder="Log" name="log">
+			</div>
+		  <input type="submit" id="submitBtn" class="btn btn-default" value="Submit the Log"></input>
 		</form>
 
 
