--- a/views/log.handlebars
+++ b/views/log.handlebars
@@ -26,7 +26,9 @@
 			<h1>Log</h1>
 		</div>
 
-		<p>Log for {{logDate}}</p>
+		<p>Log for {{date}}</p>
+		<h3>{{title}}</h3>
+		<p>{{desc}}</p>
 
 		<a href="/">
 			<img src="images/new_challenge.jpg" alt="back to main menu">
