--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -16,21 +16,64 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+    
+    <style>   
+        .topRightCorner{
+			position: absolute;
+			top:0;
+			right:0;
+		}
+        .subtitle{
+            font-size:25px;
+            text-align: center;
+        }
+        
+        
+    </style>
+    
 </head>
 
 <body>
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		<div class="jumbotron">
-			<h1>Help</h1>
+		<div class="topRightCorner">
+			<a href="/">
+				<img src="images/homeBut.jpg" alt="back to main menu	">
+			</a>
+		</div>
+        
+		<div class="text-center">
+			<h1>HELP</h1>
 		</div>
 
-		<a href="/">
-			<img src="images/new_challenge.jpg" alt="back to main menu">
-		</a>
+		<hr style="height:4px;border:none;color:#333;background-color:#333;" />
 
-		<p>HOW TO USE THE APP</p>
+		<p class= "subtitle" >Frequently Asked Questions</p>
+        <div>
+			<h4>How do I get a challenge?</h4>
+            <p>From the home page, click on the image that contains the phrase "Get Challenge". </p>
+		</div>
+        
+        <div>
+			<h4>What is the history page and how do I get there?</h4>
+            <p>You get to the history page by clicking on the image that contains the phrase "History". The history page will contain the past challenges you've done and the logs you've written in regard to those challenges that you have completed.</p>
+		</div>
+        
+        <div>
+			<h4>What is the history page and how do I get there?</h4>
+            <p>You get to the history page by clicking on the image that contains the phrase "History". The history page will contain a list of the past challenges you've done.</p>
+		</div>
+        
+        <div>
+			<h4>How do I view my log entries?</h4>
+            <p>By clicking on one of the dates listed in the history page, you will be able to view your log entries in regard to challenges you've done on that day.</p>
+		</div>
+        
+        
+        
+        
+        
 
 
 
