--- a/views/guide.handlebars
+++ b/views/guide.handlebars
@@ -16,20 +16,55 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+
+    <style>   
+        .topRightCorner{
+			position: absolute;
+			top:0;
+			right:0;
+		}
+        .subtitle{
+            font-size:25px;
+            text-align: center;
+        }
+        .tipsList{
+        	font-size: 20px;
+        }
+        
+        
+    </style>
 </head>
 
 <body>
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		<div class="jumbotron">
-			<h1>Guide</h1>
+		<div class="topRightCorner">
+			<a href="/">
+				<img src="images/homeBut.jpg" alt= "back to main menu     ">
+			</a>
 		</div>
-		<a href="/">
-			<img src="images/new_challenge.jpg" alt="back to main menu">
-		</a>
-		
-		<p>TIPS ON TALKING TO PEOPLE</p>
+
+		<div class="text-center">
+			<h1>GUIDE</h1>
+		</div>
+
+
+		<hr style="height:4px;border:none;color:#333;background-color:#333;" />
+
+		<p class="subtitle">Tips on Talking To Strangers and Other People</p>
+
+		<div class="tipsList">
+			<ol>
+				<li>Make sure you are not looking at your phone while talking to the stranger!
+					<ul><li>It is not nice to seem like you are not paying attention to the person you are talking to!</li></ul>
+				</li>
+				<li>Tip 2</li>
+				<li>Tip 3</li>
+				<li>Tip 4</li>
+				<li>Tip 5</li>
+			</ol>
+		</div>
 
 
 
