--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -56,6 +56,11 @@
 		</div>
         
         <div>
+			<h4>What is the general tips page?</h4>
+            <p>The general tips page are general tips that you could follow when talking to strangers. These tips include what you shoudn't say and how you to avoid awkward situations.</p>
+		</div>
+        
+        <div>
 			<h4>What is the history page and how do I get there?</h4>
             <p>You get to the history page by clicking on the image that contains the phrase "History". The history page will contain the past challenges you've done and the logs you've written in regard to those challenges that you have completed.</p>
 		</div>
@@ -70,12 +75,12 @@
             <p>By clicking on one of the dates listed in the history page, you will be able to view your log entries in regard to challenges you've done on that day.</p>
 		</div>
         
+          <div>
+			<h4>What am I suppose to write on my log entries?</h4>
+            <p>Write how you felt doing the challenges and other notes that you could look back on to show how much you change when talking to strangers as you gain more experience interacting with people you don't know. </p>
+		</div>
         
-        
-        
-        
-
-
+    
 
 
 	<script src="https://code.jquery.com/jquery.js"></script>
