Fixed Dead Ends

--- a/views/complete.handlebars
+++ b/views/complete.handlebars
@@ -26,7 +26,7 @@
 			<h1>Challenge Complete!</h1>
 		</div>
 
-		<a href="/">
+		<a href="/index">
 			<img src="images/new_challenge.jpg" alt="back to main menu">
 		</a>
 		<a href="/entry">
