--- a/views/entry.handlebars
+++ b/views/entry.handlebars
@@ -27,11 +27,11 @@
 		</div>
 
 
-		<a href="/">
+		<a href="/index">
 			<img src="images/new_challenge.jpg" alt="nvm, back to main menu">
 		</a>
 
-		<form name="log" role="form"  method="get" action="/add" >
+		<form name="log" role="form"  method="get" action="/add" action = "/index">
 			<h3>Write a log!</h3>
 			<div class="form-group">
 				<label for="name">Title:</label>
