--- a/views/guide.handlebars
+++ b/views/guide.handlebars
@@ -40,7 +40,7 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div class="topRightCorner">
-			<a href="/">
+			<a href="/index">
 				<img src="images/homeBut.jpg" alt= "back to main menu     ">
 			</a>
 		</div>
