--- a/views/history.handlebars
+++ b/views/history.handlebars
@@ -26,7 +26,7 @@
 			<h1>History</h1>
 		</div>
 
-		<a href="/">
+		<a href="/index">
 			<img src="images/new_challenge.jpg" alt="main menu">
 		</a>
 		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
