added meat to tips page

--- a/views/guide.handlebars
+++ b/views/guide.handlebars
@@ -40,7 +40,7 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div class="topRightCorner">
-			<a href="/index">
+			<a href="/">
 				<img src="images/homeBut.jpg" alt= "back to main menu     ">
 			</a>
 		</div>
@@ -54,15 +54,25 @@
 
 		<p class="subtitle">Tips on Talking To Strangers and Other People</p>
 
-		<div class="tipsList">
+		<div>
 			<ol>
-				<li>Make sure you are not looking at your phone while talking to the stranger!
-					<ul><li>It is not nice to seem like you are not paying attention to the person you are talking to!</li></ul>
+				<li><span class="tipsList">Make sure you are not looking at your phone while talking to the stranger!</span>
+					<ul>
+						<li>It is not nice to seem like you are not paying attention to the person you are talking to!</li>
+						<li>Maintain eye contact so it shows that you are invested in the conversation, adding the frequent head nod.</li>
+					</ul>
 				</li>
-				<li>Tip 2</li>
-				<li>Tip 3</li>
-				<li>Tip 4</li>
-				<li>Tip 5</li>
+				<li><span class="tipsList">When meeting someone for the first time, do not be rude!</span>
+					<ul>
+						<li>Remember to introduce yourself!</li>
+						<li>Respect their opinions</li>
+					</ul>
+				</li>
+				<li><span class="tipsList">Be friendly!</span>
+					<ul><li>No one wants to talk to a person who is complaining or in a negative mood!</li></ul>
+				</li>
+				<li><span class="tipsList">Tip 4</span></li>
+				<li><span class="tipsList">Tip 5</span></li>
 			</ol>
 		</div>
 
