--- a/views/entry.handlebars
+++ b/views/entry.handlebars
@@ -31,7 +31,7 @@
 			<img src="images/new_challenge.jpg" alt="nvm, back to main menu">
 		</a>
 
-		<form name="log" role="form"  method="get" action="/add" action = "/index">
+		<form name="log" role="form"  method="get" action="/add">
 			<h3>Write a log!</h3>
 			<div class="form-group">
 				<label for="name">Title:</label>
