entry editing, human readable dates, randomize challenge on click

--- a/views/challenge.handlebars
+++ b/views/challenge.handlebars
@@ -27,7 +27,7 @@
 			font-size: 25px;
 			color: white;
 		}
-			
+
 		.topRightCorner{
 			position: absolute;
 			top:0;
@@ -41,7 +41,7 @@
 
 
 		}
-		
+
 	</style>
 	<!-- this is a comment in HTML -->
 
@@ -76,14 +76,14 @@
 		<table class="main" border="0" cellpadding="15" margin="10">
 			<tr class="challengeBorder">
 				<td>
-					<p class="theChallenge">{{challenge}}</p>	
+					<a href="#"><p class="theChallenge">{{challenge}}</p></a>
 				</td>
 			</tr>
 		</table>
 
 		<table class="main" border="0">
 			<tr>
-				<td>		
+				<td>
 				<a href="/complete">
 					<img src="images/itsDone.jpg" alt="I'm Done" width= "150" height ="150">
 					</a>
@@ -95,5 +95,6 @@
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/randomChallenge.js"></script>
 </body>
 </html>
