--- a/views/history.handlebars
+++ b/views/history.handlebars
@@ -35,7 +35,7 @@
 		{{#each entries}}
 		<div class="/log" id="{{date}}">
 			<a href="/log/{{date}}" class="thumbnail">
-				<p>{{date}} - {{title}}</p>
+				<p>{{readDate}} - {{title}}</p>
 			</a>
 		</div>
 		{{/each}}
