--- a/views/log.handlebars
+++ b/views/log.handlebars
@@ -26,10 +26,13 @@
 			<h1>Log</h1>
 		</div>
 
-		<p>Log for {{date}}</p>
+		<p>Log for {{readDate}}</p>
 		<h3>{{title}}</h3>
 		<p>{{desc}}</p>
 
+		<a href="/entry/{{date}}">
+			<img src="images/new_challenge.jpg" alt="edit history">
+		</a>
 		<a href="/">
 			<img src="images/new_challenge.jpg" alt="back to main menu">
 		</a>
