--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="/css/introHCI.css" rel="stylesheet">
+	<link href="/css/smallTalk.css" rel="stylesheet">
 	<style>
 		h1{
 			font-size: 60px;
@@ -29,41 +29,38 @@
     <![endif]-->
 </head>
 
-<body>
+<body class="backgroundColor">
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		<div class="text-center">
-			<h1>
+		<div>
+			<h1 class="titlePage">
 				Small Talk
 			</h1>
 		</div>
-
-		<hr style="height:4px;border:none;color:#333;background-color:#333;" />
 
 		<table class="main" border="0" align="center" >
 			<tr>
 			<td>		
 				<a href="challenge" >
-					<img src="images/main.jpg" alt="challenge" width ="200" height="200">
+				    <button class="bigbtn">Get Challenge</button>
 				</a>
 			</td>
 			<td>
 				<a href="history">
-					<img src="images/history.jpg" alt="history" width ="200" height="200">
+					 <button class="bigbtn">My History</button>
 				</a>
 			</td>
 			</tr>
-
 			<tr>
 			<td>	
 				<a href="help">
-					<img src="images/help.jpg" alt="halp" width ="200" height="200">
+					 <button class="mediumbtn">HELP</button>
 				</a>
 			</td>
 			<td>
 				<a href="guide">
-					<img src="images/generaltips.jpg" alt="how to 	talk like a real human bean" width ="200" height="200">
+                    <button class="mediumbtn">GENERAL TIPS</button>
 				</a>
 			</td>
 			</tr>
