--- a/views/history.handlebars
+++ b/views/history.handlebars
@@ -7,7 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="/css/introHCI.css" rel="stylesheet">
+    <link href="/css/smallTalk.css" rel="stylesheet">
+    
+
 	<!-- this is a comment in HTML -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -18,17 +20,17 @@
     <![endif]-->
 </head>
 
-<body>
+<body class="backgroundColor">
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		<div class="jumbotron">
-			<h1>History</h1>
+         <div><a href="/index"><button class="homebtn">MAIN MENU</button></a></div>
+		<div class="text-center">
+			<h1 class="titlePage">History </h1>
 		</div>
-
-		<a href="/index">
-			<img src="images/new_challenge.jpg" alt="main menu">
-		</a>
+		
+        <hr style="height:4px;border:none;color:#333;background-color:#333;" />
+        
 		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
