--- a/views/log.handlebars
+++ b/views/log.handlebars
@@ -7,7 +7,31 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="/css/introHCI.css" rel="stylesheet">
+    <link href="/css/smallTalk.css" rel="stylesheet">
+    
+	<style>
+        .subheader{
+            font-size:25px;
+            
+             
+        }
+        .mediumbtn{
+            font-size:15px;
+            width: 200px;
+            height: 50px;
+            margin:10px;
+        }
+        
+        .titlePage{
+            font-size:75px;
+        }
+        
+        .descBorder{
+			background-color: white;
+            
+		}
+        
+    </style>
 	<!-- this is a comment in HTML -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -18,29 +42,33 @@
     <![endif]-->
 </head>
 
-<body>
+<body class="backgroundColor">
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		<div class="jumbotron">
-			<h1>Log</h1>
-		</div>
+		 <div><a href="/index"><button class="homebtn">MAIN MENU</button></a></div>
+			<h1 class="titlePage">JOURNAL ENTRY </h1>
+		
 
-		<p>Log for {{readDate}}</p>
-		<h3>{{title}}</h3>
-		<p>{{desc}}</p>
+		<hr style="height:4px;border:none;color:#333;background-color:#333;" />
+
+		<p class="subheader">Log for {{readDate}}</p>
+        <div class="form-group">
+            	<h3>{{title}}</h3>
+			</div>
+			<div class="form-group form-group-lg">
+				<input type="text" class="form-control" id="description" placeholder="Log" name="log" value="{{desc}}">
+			</div>        
+		
 
 		<a href="/entry/{{date}}">
-			<img src="images/new_challenge.jpg" alt="edit history">
-		</a>
-		<a href="/">
-			<img src="images/new_challenge.jpg" alt="back to main menu">
+			<button class="mediumbtn">Edit Entry</button>
 		</a>
 		<a href="/history/">
-			<img src="images/new_challenge.jpg" alt="back to history">
+			<button class="mediumbtn">Back To History</button>
 		</a>
-
-
+    
+  </div> 
 
 
 	<script src="https://code.jquery.com/jquery.js"></script>
