made webpages fit phone screen

--- a/views/complete.handlebars
+++ b/views/complete.handlebars
@@ -18,10 +18,22 @@
         }
         
         .bigbtn{
-            height:250px;
+            height:600%;
             margin:15px;
+            width:40%;
+            text-align:center;
+            font-size:150%;
         }
-       
+        .mediumbtn{
+            height:300%;
+            width:40%;
+            margin:15px;
+            text-align:center;
+        }
+        .titlePage{
+            font-size:250%
+        }
+           
     </style>     
 	<!-- this is a comment in HTML -->
 
@@ -34,15 +46,16 @@
 </head>
 
 <body class="victory">
-	<div class="container" align="center">
+	<div class="container" >
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		<div>
+		<div align="center"> 
 			<h1 class="titlePage">
 				CHALLENGE COMPLETE!!
 			</h1>
 		</div>
 
+        <div align="center">
 		<a href="/index">
 			 <button class="mediumbtn">MAIN MENU</button>
 		</a>
@@ -52,9 +65,9 @@
 			<button class="bigbtn">WRITE ABOUT IT!</button>
 		</a>
         </div>
-
+        </div>
     </div>
-
+     
 
 
 	<script src="https://code.jquery.com/jquery.js"></script>
