--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,15 +9,15 @@
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/smallTalk.css" rel="stylesheet">
 	<style>
-		h1{
-			font-size: 60px;
-			color: blue;
-		}
 
-		table.main {
+
+        .main {
     		border-collapse: separate;
    			border-spacing: 20px;
+           
 		}
+        
+    
 	</style>
 	<!-- this is a comment in HTML -->
 
@@ -33,39 +33,34 @@
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		<div>
+		<div align="center">
 			<h1 class="titlePage">
 				Small Talk
 			</h1>
 		</div>
 
-		<table class="main" border="0" align="center" >
-			<tr>
-			<td>		
-				<a href="challenge" >
+        <div align="center">
+            <a href="challenge" >
 				    <button class="bigbtn">Get Challenge</button>
 				</a>
-			</td>
-			<td>
-				<a href="history">
+        <a href="history">
 					 <button class="bigbtn">My History</button>
-				</a>
-			</td>
-			</tr>
-			<tr>
-			<td>	
+				</a>    
+        </div>    
+        <div align="center">
+            
 				<a href="help">
 					 <button class="mediumbtn">HELP</button>
 				</a>
-			</td>
-			<td>
-				<a href="guide">
+            
+            <a href="guide">
                     <button class="mediumbtn">GENERAL TIPS</button>
 				</a>
-			</td>
-			</tr>
-		</table>
-
+        </div>
+        
+        
+            
+            
 	</div>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
