--- a/views/log.handlebars
+++ b/views/log.handlebars
@@ -22,9 +22,6 @@
             margin:10px;
         }
         
-        .titlePage{
-            font-size:75px;
-        }
         
         .descBorder{
 			background-color: white;
@@ -52,12 +49,12 @@
 
 		<hr style="height:4px;border:none;color:#333;background-color:#333;" />
 
-		<p class="subheader">Log for {{readDate}}</p>
+		<p class="subheader">Entry for {{readDate}}</p>
         <div class="form-group">
             	<h3>{{title}}</h3>
 			</div>
 			<div class="form-group form-group-lg">
-				<input type="text" class="form-control" id="description" placeholder="Log" name="log" value="{{desc}}">
+				<input type="text" class="form-control" id="description" name="log" value="{{desc}}">
 			</div>        
 		
 
