--- a/public/css/smallTalk.css
+++ b/public/css/smallTalk.css
@@ -2,22 +2,23 @@
     background: #FF512F; 
     background: linear-gradient(to left, #FF512F , #F09819); 
     background: linear-gradient(to left, #FF512F , #F09819); 
-    
+    width:100%;   
 }
 
 
 .titlePage{
     color: #3cb0fd;
-    font-size: 100px;
+    font-size: 450%;
     text-shadow: -1px 0px 5px rgba(0, 0, 0, 1);
     letter-spacing:1px;
     text-align:center;
+    width: 90%;
    
 }
 
 .subHeader{
     color: #3cb0fd;
-    font-size: 40px;
+    font-size: 200%;
     text-shadow: -1px 0px 5px rgba(0, 0, 0, 1);
     letter-spacing:1px;
 
@@ -35,11 +36,13 @@
   text-shadow: -1px 0px 5px rgba(0, 0, 0, 1);
   border-radius: 8px;
   color: #ffffff;
-  font-size: 50px;
+  font-size: 200%;
   padding: 40px 40px 40px 40px;
-  width: 300px;
-  height: 200px;
+  width: 60%;
+  height: 150%;
+  text-align: center;
   text-decoration: none;
+  margin: 10px;
 }
 
 
@@ -55,10 +58,12 @@
   border-radius: 8px;
   text-shadow: -1px 0px 5px rgba(0, 0, 0, 1);
   color: #ffffff;
-  width: 300px;
-  height: 100px;
-  font-size: 26px;
+  width: 60%;
+  height: 250%;
+  font-size: 150%;
+  text-align: center;
   padding: 10px 40px 10px 40px;
+  margin: 10px;
 }
 
 .smallbtn {
