--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="/css/introHCI.css" rel="stylesheet">
+	<link href="/css/smallTalk.css" rel="stylesheet">
 	<!-- this is a comment in HTML -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -18,11 +18,6 @@
     <![endif]-->
     
     <style>   
-        .topRightCorner{
-			position: absolute;
-			top:0;
-			right:0;
-		}
         .subtitle{
             font-size:25px;
             text-align: center;
@@ -33,15 +28,11 @@
     
 </head>
 
-<body>
+<body class="backgroundColor">
 	<div class="container">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
-		<div class="topRightCorner">
-			<a href="/index">
-				<img src="images/homeBut.jpg" alt="back to main menu	">
-			</a>
-		</div>
+         <div><a href="/index"><button class="homebtn">MAIN MENU</button></a></div>
         
 		<div class="text-center">
 			<h1>HELP</h1>
