--- a/views/complete.handlebars
+++ b/views/complete.handlebars
@@ -12,9 +12,8 @@
     <style>
        
         .victory{
-            background: #ffb347; 
-            background: linear-gradient(to left, #ffb347 , #ffcc33); 
-            background: linear-gradient(to left, #ffb347 , #ffcc33); 
+            background: #FFBE61; 
+
         }
         
         .bigbtn{
