--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
 <style>
     
 .thebackground{
-    background-color: #FF512F; 
+    background-color: #FFBE61; 
     background-color: linear-gradient(to left, #FF512F , #F09819); 
     background-color: linear-gradient(to left, #FF512F , #F09819); 
                 
