--- a/views/log.handlebars
+++ b/views/log.handlebars
@@ -10,6 +10,18 @@
     <link href="/css/smallTalk.css" rel="stylesheet">
 
 	<style>
+	.form-group{
+		width: 100%;
+		word-wrap: break-word;
+
+	}
+
+	.form-group-lg{
+		white-space: pre-line;
+	}
+	.title{
+		font-weight: bold;
+	}
         .subheader{
             font-size:25px;
 
@@ -23,7 +35,7 @@
         }
 
 
-        .descBorder{
+    .descBorder{
 			background-color: white;
 
 		}
@@ -50,8 +62,8 @@
 		<hr style="height:4px;border:none;color:#333;background-color:#333;" />
 
 		<p class="subheader">Entry for {{readDate}}</p>
-        <div class="form-group">
-            	<h3>{{title}}</h3>
+      <div class="form-group">
+            	<h3 class="title">{{title}}</h3>
 			</div>
 			<div class="form-group form-group-lg">
         <p>{{desc}}</p>
