--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -66,7 +66,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
     	<input type="text" name="u" placeholder="Username" required="required" />
         <input type="password" name="p" placeholder="Password" required="required" />
         
-        <button class="smallbtn" type="submit" >Log Me In</button>
+        <button class="loginbtn" type="submit" >Log Me In</button>
         
     </form>
 </div>
