more design changes

--- a/views/complete.handlebars
+++ b/views/complete.handlebars
@@ -12,10 +12,13 @@
     <style>
        
         .victory{
-            background: #FFBE61; 
+            background: #ffffff; 
+            /* 
+            previous color #FFBE61
+            */
 
         }
-        
+        node
         .bigbtn{
             height:600%;
             margin:15px;
