--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,8 @@
 <style>
     
 .thebackground{
-    background-color: #FFBE61; 
+    background-color: #ffffff; 
+    /*Previous color: #FFBE61*/
     background-color: linear-gradient(to left, #FF512F , #F09819); 
     background-color: linear-gradient(to left, #FF512F , #F09819); 
                 
@@ -27,7 +28,11 @@
     
 }
 
-.login h1 { color: #3cb0fd; text-shadow: -1px 0px 5px rgba(0, 0, 0, 1); letter-spacing:1px; text-align:center; }
+.login h1 { 
+	color: #3cb0fd; 
+	/*text-shadow: -1px 0px 5px rgba(0, 0, 0, 1); */
+	letter-spacing:1px; text-align:center; 
+}
 
 input { 
 	width: 100%; 
